  fix cgiproxy_read0 written bytes statistic (was always 0)
  handle invalid urlencoded sequences by passing them through instead of truncating them
  fix FIND_NEXT2 in SMB
  support SMB directory listing in dl
  fix eagain handling in SSL
  abort the SSL initialization if /dev/urandom can't be opened
  defang HTTP headers that start with '(' to help with CVE-2014-6271

0.13:
  add SUPPORT_DIR_REDIRECT in gatling_features.h
  several SCGI and FASTCGI fixes
  support PolarSSL, see http://www.polarssl.org/
  remove spurious Content-Range header in 304 HTTP responses
  fix crash bug on I/O errors inside SSL connections
  make use of new libowfat API to reduce syscalls
  fix directory traversal in FTP (Jann Horn)

0.12:
  close ftp-uploaded files in cleanup() (Johannes Ziemke)
  fix some bizarre ftp races that caused assertion failures (Johannes Ziemke)
  look for theora in .ogg files and say they are video/ogg (requires
    SUPPORT_MIMEMAGIC)
  fix http ranges for Range: bytes=0-, would trigger 416 before
    (Sebastian Köhler)
  win7 does some new strange ioctl call when copying files; return error
    instead of dropping connection
  fix off-by-ones in http byte ranges

0.11:
  add proxy support to dl ($http_proxy and $ftp_proxy like libwww)
  setuid in the forkslave, too
  fix the symlink to directory entries (Olaf Dreesen)

0.10:
  add multi-ranges (only used by the Acrobat Reader plugin AFAIK)
  abstract out accept() deferment to libowfat (socket_deferaccept)
  add read-only SMB support
  add lame anti-DOS support (see README.antidos)
  sort the other way around in referer
  dl in http mode now supports cookies and sets the referer
  add SSH forwarding to SSL support (see README.tls)
  add matchiprange (see comment at top of matchiprange.c)
  fix a few CGI problems report by Andreas Stuehrk

0.9:
  add /server-status
  request_done, socket_error and cgiproxy_read0 now print the number of
    received and sent bytes in this request, to make traffic accounting